--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>jquery</title>
+    <title>weatherApp</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -20,7 +20,7 @@
           <p>
             coded with <i class="fa fa-heart" style="color: red;"></i>
             by
-            <a href="sainkee.github.io" target="_blank">sainkee kesharwani</a>
+            <a href="https://github.com/Sainkee" target="_blank">sainkee kesharwani</a>
           </p>
 
           <div class="output">
